# leaf-measure

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.agents/skills/leaf-fameles/: SKILL.md
.claude/skills/leaf-fameles/: SKILL.md
config/: runtime.example.toml  versions.toml
docs/: licensing.md  limitations.md  method.md  public-release-strategy.md  release-checklist.md  validation.md
docs/releases/: v0.1.0.md
engine/: __init__.py  cli.py  config.py  dpi.py  errors.py  executors.py  fiji.py  full_mask_polarity.py  full_mask_recovery.py  macros.py  mask_correction.py  preprocess.py  reporting.py  runtime.py  sanity.py  skill_sync.py  thumbnail_extraction.py  thumbnail_measurements.py  upstream.py
fixtures/: README.md
golden/: README.md
macros/: README.md
scripts/: bootstrap.ps1  stage-assets.ps1  sync-skills.ps1
skills/leaf-fameles/: SKILL.md
skills/leaf-fameles/agents/: openai.yaml
skills/leaf-fameles/references/: artifact-handling.md  mode-selection.md
skills/leaf-measure/: SKILL.md
tests/: conftest.py  test_bootstrap_script.py  test_cli_diagnostics.py  test_error_reporting.py  test_fiji_resolution.py  test_full_image_reproduction.py  test_full_mask_polarity.py  test_full_mask_recovery.py  test_macro_patchers.py  test_mask_correction.py  test_preprocess.py  test_relative_output_cli.py  test_reporting.py  test_runtime.py  test_sanity.py  test_skill_bundle_setup.py  test_skill_install.py  test_skill_sync.py  test_thumbnail_extraction.py  test_thumbnail_measurements.py  test_thumbnails_execution.py  test_upstream.py
(+6 files in other folders)
